--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "marked": "^16.0.0",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
+    "perf_hooks": "^0.0.1",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "react": "^19.1.0",
